Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-TREST-6 Страница поддержки br
+TREST-6 Страница поддержкиbr
 
 
-Позвоните нам +998905500757 br
+Позвоните нам +998905500757br
 
 
 Напишите нам datafin.uz@gmail.com
