--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-TREST-6 Страница поддержкиbr
-
-
-Позвоните нам +998905500757br
-
-
-Напишите нам datafin.uz@gmail.com
+<p>TREST-6 Страница поддержки<br>Позвоните нам +998905500757<br>Напишите нам datafin.uz@gmail.com</p>
