Add support page content to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <p>TREST-6 Страница поддержки<br>Позвоните нам +998905500757<br>Напишите нам datafin.uz@gmail.com</p>
+
+
+<h1>TREST-6 Страница поддержки</h1>
+<p>Позвоните нам +998905500757</p>
+<p>Напишите нам datafin.uz@gmail.com</p>
